fix: add min width to github logo to avoid layout shift

--- a/src/components/WorkDetailModal/WorkDetailModal.css
+++ b/src/components/WorkDetailModal/WorkDetailModal.css
@@ -1,269 +1,270 @@
 .WorkDetailModalContainer {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 100vw;
-  height: 100%;
-  overflow-y: scroll;
+	position: fixed;
+	top: 0;
+	right: 0;
+	width: 100vw;
+	height: 100%;
+	overflow-y: scroll;
 
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 
-  /* opacity: 0; */
-  transform: translateY(100%);
+	/* opacity: 0; */
+	transform: translateY(100%);
 
-  transition: all 0.4s ease-in-out;
+	transition: all 0.4s ease-in-out;
 }
 
 .WorkDetailModalContainer[visible="true"] {
-  opacity: 1;
-  transform: translateY(0%);
+	opacity: 1;
+	transform: translateY(0%);
 }
 
 .WorkDetailContent {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
 
-  padding: 2% 4%;
-  margin-top: var(--top-nav-size);
+	padding: 2% 4%;
+	margin-top: var(--top-nav-size);
 
-  background: var(--base-gradient);
-  box-shadow: 0px -5px 20px 5px #00000040;
+	background: var(--base-gradient);
+	box-shadow: 0px -5px 20px 5px #00000040;
 
-  border-top-left-radius: 20pt;
-  border-top-right-radius: 20pt;
+	border-top-left-radius: 20pt;
+	border-top-right-radius: 20pt;
 }
 
 .WorkDetailHeader {
-  display: flex;
+	display: flex;
 }
 
 .WorkDetailBack {
-  font-size: 15pt;
-  font-weight: 600;
-  color: var(--accent);
-  padding: 8pt;
-  cursor: pointer;
+	font-size: 15pt;
+	font-weight: 600;
+	color: var(--accent);
+	padding: 8pt;
+	cursor: pointer;
 }
 
 .WorkDetailBody {
-  display: flex;
-  flex: 1;
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: 2% 2% 0% 5%;
+	display: flex;
+	flex: 1;
+	flex-direction: row;
+	flex-wrap: wrap;
+	padding: 2% 2% 0% 5%;
 }
 
 .WorkDetailTitleWrapper {
-  position: absolute;
-  left: 0;
-  align-self: center;
-  transform: translateX(calc(-50% + 25pt)) rotate(-90deg);
+	position: absolute;
+	left: 0;
+	align-self: center;
+	transform: translateX(calc(-50% + 25pt)) rotate(-90deg);
 }
 
 .WorkDetailTitle {
-  font-family: "PlayfairItalic";
-  color: var(--accent);
+	font-family: "PlayfairItalic";
+	color: var(--accent);
 }
 
 .WorkDetailBodyContent {
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap-reverse;
+	flex: 1;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap-reverse;
 }
 
 .WorkDetailGallery {
-  flex: 1 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-right: 10pt;
-  margin-left: 10pt;
+	flex: 1 0;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	margin-right: 10pt;
+	margin-left: 10pt;
 }
 
 .ImageWrapper {
-  flex: 1;
-  max-height: 80vh;
-  /* min-width: 200pt; */
-  margin: 4pt;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	flex: 1;
+	max-height: 80vh;
+	/* min-width: 200pt; */
+	margin: 4pt;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .Image {
-  width: 100%;
-  border-radius: 10pt;
-  overflow: hidden;
+	width: 100%;
+	border-radius: 10pt;
+	overflow: hidden;
 }
 
 .WorkDetailDescriptionWrapper {
-  flex: 0.5 1 50pt;
-  color: var(--accent-light);
-  font-size: calc(1vw + 15pt);
-  display: flex;
-  flex-direction: column;
+	flex: 0.5 1 50pt;
+	color: var(--accent-light);
+	font-size: calc(1vw + 15pt);
+	display: flex;
+	flex-direction: column;
 }
 
 .WorkDetailFooter {
-  margin-top: 16pt;
-  flex: 0;
-  display: flex;
+	margin-top: 16pt;
+	flex: 0;
+	display: flex;
 }
 
 .PrevItem {
-  flex: 1;
+	flex: 1;
 }
 
 .WorkDetailFooterItem {
-  font-family: "PlayfairItalic";
-  color: var(--accent);
-  font-size: calc(2vw + 20pt);
-  letter-spacing: calc(0.1vw - 4pt);
-  cursor: pointer;
+	font-family: "PlayfairItalic";
+	color: var(--accent);
+	font-size: calc(2vw + 20pt);
+	letter-spacing: calc(0.1vw - 4pt);
+	cursor: pointer;
 }
 
-.WorkDetailFooterItem[enabled=false] {
-  opacity: 0.5;
-  cursor: auto;
-  pointer-events: none;
+.WorkDetailFooterItem[enabled="false"] {
+	opacity: 0.5;
+	cursor: auto;
+	pointer-events: none;
 }
 
 .WorkDetailPrev {
-  flex: 1;
+	flex: 1;
 }
 
 .WorkDetailDescription {
-  font-size: calc(0.8vw + 15pt);
-  margin-bottom: 0pt;
-  /* letter-spacing: 1pt; */
+	font-size: calc(0.8vw + 15pt);
+	margin-bottom: 0pt;
+	/* letter-spacing: 1pt; */
 }
 
 .WorkDetailDescription2 {
-  flex: 1;
-  font-size: calc(0.5vw + 12pt);
+	flex: 1;
+	font-size: calc(0.5vw + 12pt);
 }
 
 .WorkDetailLinksWrapper {
-  display: flex;
-  justify-content: center;
-  /* margin-top: 24pt; */
-  flex-wrap: wrap;
+	display: flex;
+	justify-content: center;
+	/* margin-top: 24pt; */
+	flex-wrap: wrap;
 }
 
 .WorkDetailLink {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .Link {
-  margin-right: 16pt;
-  margin-top: 24pt;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	margin-right: 16pt;
+	margin-top: 24pt;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .WebsiteLink {
-  background-color: whitesmoke;
-  padding: 4pt 8pt;
-  height: 28pt;
-  display: flex;
-  align-items: center;
-  border-radius: 5pt;
+	background-color: whitesmoke;
+	padding: 4pt 8pt;
+	height: 28pt;
+	display: flex;
+	align-items: center;
+	border-radius: 5pt;
 }
 
 .WebsiteIcon {
-  flex: 0;
-  height: 44px;
-  object-fit: contain;
-  margin-right: 4pt;
+	flex: 0;
+	height: 44px;
+	object-fit: contain;
+	margin-right: 4pt;
 }
 
 .WebsiteText {
-  font-size: 18pt;
-  font-weight: 800;
-  color: black;
-  letter-spacing: 0.7pt;
+	font-size: 18pt;
+	font-weight: 800;
+	color: black;
+	letter-spacing: 0.7pt;
 }
 
 .GithubLink {
-  background-color: whitesmoke;
-  height: 36px;
-  padding: 4pt 8pt;
-  border-radius: 5pt;
-  display: flex;
+	background-color: whitesmoke;
+	height: 36px;
+	padding: 4pt 8pt;
+	border-radius: 5pt;
+	display: flex;
+	min-width: 88px;
 }
 
 .GithubIcon {
-  height: 100%;
-  object-fit: contain;
+	height: 100%;
+	object-fit: contain;
 }
 
 .AppStoreIcon {
-  height: 47px;
-  object-fit: contain;
+	height: 47px;
+	object-fit: contain;
 }
 
 @media (max-width: 800px) {
-  .WorkDetailContent {
-    padding: 4%;
-  }
+	.WorkDetailContent {
+		padding: 4%;
+	}
 
-  .WorkDetailTitleWrapper {
-    position: relative;
-    transform: unset;
-    margin-top: 16pt;
-    flex: 1 0 100%;
-  }
+	.WorkDetailTitleWrapper {
+		position: relative;
+		transform: unset;
+		margin-top: 16pt;
+		flex: 1 0 100%;
+	}
 
-  .WorkDetailTitle {
-    transform: unset;
-  }
+	.WorkDetailTitle {
+		transform: unset;
+	}
 
-  .WorkDetailBody {
-    padding: unset;
-  }
+	.WorkDetailBody {
+		padding: unset;
+	}
 
-  .WorkDetailDescriptionWrapper {
-    flex: 1;
-  }
+	.WorkDetailDescriptionWrapper {
+		flex: 1;
+	}
 
-  .WorkDetailDescription2 {
-    flex: 0;
-  }
+	.WorkDetailDescription2 {
+		flex: 0;
+	}
 
-  .WorkDetailBodyContent {
-    width: 100%;
-  }
+	.WorkDetailBodyContent {
+		width: 100%;
+	}
 
-  .WorkDetailGallery {
-    flex: 1 1 200pt;
-    margin-top: 16pt;
-    width: 100%;
-    flex-direction: column;
-    align-items: stretch;
-  }
+	.WorkDetailGallery {
+		flex: 1 1 200pt;
+		margin-top: 16pt;
+		width: 100%;
+		flex-direction: column;
+		align-items: stretch;
+	}
 
-  .ImageWrapper {
-    flex: 1;
-    min-width: 150pt;
-    margin: 4pt;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+	.ImageWrapper {
+		flex: 1;
+		min-width: 150pt;
+		margin: 4pt;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
 
-  .Image {
-    height: 100%;
-    object-fit: contain;
-  }
+	.Image {
+		height: 100%;
+		object-fit: contain;
+	}
 
-  .Link {
-    margin-left: 8pt;
-    margin-right: 8pt;
-  }
+	.Link {
+		margin-left: 8pt;
+		margin-right: 8pt;
+	}
 }
